--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # ---------------------------------------------------------------
 
 # Site
-title: AOSP for Redmi Note 3
+title: AOSP For Redmi Note 3
 subtitle:
 description: ROMer
 author: DoveKi
