--- a/_config.yml
+++ b/_config.yml
@@ -381,13 +381,13 @@ baidu_analytics: 5bd3fe76bd345e12a9f9f28ddbfc03ea
 #duoshuo_shortname:
 
 # Disqus
-# hide: true  - hide comments (visitors need to click to load the comments)
-#       false - default
 disqus:
-  enable: true # turn on for testing
-  shortname: pwyqblog # for testing
-  hide: true # new function testing
-  count: false # need to be false; otherwise the count shows 0 or only an comment icon
+  enable: false
+  shortname:
+  count: true
+  # hide comments (visitors need to click to load the comments)
+  # count need to be false when hide is true
+  hide: false
 
 # Hypercomments
 #hypercomments_id:
