--- a/_config.yml
+++ b/_config.yml
@@ -384,7 +384,7 @@ baidu_analytics: 5bd3fe76bd345e12a9f9f28ddbfc03ea
 disqus:
   enable: false
   shortname:
-  count: true
+  count: false
   # hide comments (visitors need to click to load the comments)
   # count need to be false when hide is true
   hide: true
