--- a/_config.yml
+++ b/_config.yml
@@ -122,7 +122,7 @@ menu:
   google: /2017/08/12/google_aosp/
   pixel: /2017/08/12/pixel_aosp/
   #categories: /categories/
-  about: /about
+  about: /about/
   #archives: /archives/
   #tags: /tags/
   #sitemap: /sitemap.xml
