--- a/_config.yml
+++ b/_config.yml
@@ -407,7 +407,7 @@ changyan:
 
 # Support for LiveRe comments system.
 # You can get your uid from https://livere.com/insight/myCode (General web site)
-livere_uid: MTAyMC8zMDE0Ni82NzAx
+#livere_uid: MTAyMC8zMDE0Ni82NzAx
 
 # Baidu Share
 # Available value:
