--- a/_config.yml
+++ b/_config.yml
@@ -613,8 +613,8 @@ canvas_sphere: false
 # Canvas-ribbon
 canvas_ribbon: false
 
-reward_comment: Consider donating if you like my work
-reward_comment: 如果你喜欢我的ROM，请我喝瓶可乐吧
+#reward_comment: Consider donating if you like my work
+#reward_comment: 如果你喜欢我的ROM，请我喝瓶可乐吧
 wechatpay: /images/wechat.png
 alipay: /images/alipay.jpg
 
