--- a/_config.yml
+++ b/_config.yml
@@ -615,8 +615,8 @@ canvas_ribbon: false
 
 #reward_comment: Consider donating if you like my work
 #reward_comment: 如果你喜欢我的ROM，请我喝瓶可乐吧
-wechatpay: /images/wechat.png
-alipay: /images/alipay.jpg
+#wechatpay: /images/wechat.png
+#alipay: /images/alipay.jpg
 
 # Script Vendors.
 # Set a CDN address for the vendor you want to customize.
